--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </style>
 </head>
 <body>
-  <img id="logo" src="https://drive.google.com/uc?export=view&id=1f9jXUrA2LacZTL1Xujj6C" alt="Moments of Motherhood Logo">
+  <img id="logo" src="https://res.cloudinary.com/dpsiwijyq/image/upload/v1754367073/Moments_of_Motherhood_upfwmb.png" alt="Moments of Motherhood Logo">
   <h1>Record Your Memory</h1>
   <p>Tap below to begin recording your audio or video memory.</p>
   <video id="preview" playsinline autoplay muted></video>
